examples/test/testpolicy4194.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4194
  namespace: namespace169
spec:
  podSelector:
    matchLabels:
      key5: value4
      key31: value0
      key43: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value11
      podSelector:
        matchLabels:
          key42: value6
